--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -49,7 +49,7 @@ edit_page = {repo_url = "", repo_branch = "master", editable = {docs = true, pag
 
 # Date and time format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
 #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
-date_format = "Jan 2006"
+date_format = "Jan 2, 2006"
 #   Examples: "3:04 pm" or "15:04"
 time_format = "3:04 PM"
 
