--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,10 +18,10 @@
   url = "#projects"
   weight = 30
 
-#[[main]]
-#  name = "Experience"
-#  url = "#experience"
-#  weight = 40
+[[main]]
+  name = "Experience"
+  url = "#experience"
+  weight = 40
 
 [[main]]
   name = "Contact"
